DarkIce next version

    o added possibility to stream in mono even when recording in stereo,
      thus enabling mono and stereo streams with the same darkice instance.
      only for mp3 streams at the moment
      thanks to Kai Krakow <kai@kaishome.de>
    o bug fix: resampling audio for vorbis streams bugs fixed

02-08-2002: DarkIce 0.10.1 released

    o bug fix: when the last server dropped connection, darkice crashed
      thanks to Nicu Pavel <npavel@ituner.com>
    o bug fix for LameLibEncoder: the mp3 encoding buffer was deleted too
      early, resulting in mp3 data corruption.
      thanks to Nicu Pavel <npavel@ituner.com>

20-07-2002: DarkIce 0.10 released

    o added possibility to select constant, average and variable bit rate
      encoding modes with specifying encoding quality as well.
      thanks to Nicu Pavel <npavel@ituner.com>
    o added support for Ogg Vorbis 1.0 final, removed support for rc2
    o added fault tolerance: if one of several server connection drops,
      DarkIce carries on with the rest of the servers still connected

09-04-2002: DarkIce 0.9.1 released

    o bugfix: a memory leak was introduced in 0.9, which is fixed thanks to
      Kristjan G. Bjarnason <kgb@gangverk.is> and Nicu Pavel <npavel@ituner.com>
    o minor documentation fix

28-03-2002: DarkIce 0.9 released

    o added possibility to simply read from the soundcard, encode, and
      save the encoded data into a local file (no streaming server needed)
    o added variable bitrate support for vorbis streams
    o support for both rc2 and rc3 versions of vorbis libraries
    o added support for resampling when encoding to vorbis
      thanks to the OSALP project for the resampling class,
      http://osalp.sourceforge.net/ and
      Julius O. Smith, <jos@ccrma.stanford.edu> for the original code

20-02-2002: DarkIce 0.8 released

    o added possibility to disable lowpass and highpass filtering for lame
    o fixed incorrect vorbis bitrate setting